on mobile devices, fix for incorrect display of the chat page

--- a/src/pages/chat/Messages/Messahes.module.scss
+++ b/src/pages/chat/Messages/Messahes.module.scss
@@ -11,7 +11,7 @@
         margin-bottom: 50px;
     }
     @media (max-width: 992px){
-        max-height: 690px;
+        max-height: 600px;
     }
     @media (max-width: 767px){
         padding-right: 20px;
